<resources>
    <string name="app_name">Unitrans</string>

    <string name="routes">List of Routes</string>
    <string name="add">Add</string>
    <string name="memorial_union">Memorial Union</string>
    <string name="silo">Silo</string>
    <string name="hs">Davis High &amp; Junior High</string>
    <string name="announcement">Announcement</string>
    <string name="arrival_prediction">Arrival Prediction</string>
    <string name="arrival_text">The bus will arrive here in:</string>
    <string name="route_schedule">Route Schedule</string>
    <string name="route_schedule_view_all">Click here to view the whole schedule</string>
    <string name="crowdedness">Predicted Crowdedness</string>
    <string name="tuesday">Tuesday</string>
    <string name="on_time">On-Time</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="j">J</string>
    <string name="k">K</string>
    <string name="l">L</string>
    <string name="m">M</string>
    <string name="o">O</string>
    <string name="p">P</string>
    <string name="q">Q</string>
    <string name="s">S</string>
    <string name="t">T</string>
    <string name="v">V</string>
    <string name="w">W</string>
    <string name="x">X</string>
    <string name="z">Z</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
</resources>
